# wendle

./: .gitignore  README.md  pyproject.toml
examples/: settings_assistant.py
scripts/: auto_proof.py  auto_record.py  clock_reconfirm.py  crawl_demo.py  crawl_sweep.py  demo_hook_frida.py  fork_validate.py  probe_launch_50.py  probe_launch_realistic.py  probe_set_checked.py  spike1_gate.py  spike2_capture_corpus.py  spike2_corpus_check.py  spike2_corpus_diff.py  spike2_verify.py  tap_probe.py  twin_validate.py  validate_e2e.py  verify_on_device.py
tests/: test_actions.py  test_adapter_region.py  test_calibrate.py  test_chrome_digest.py  test_cli.py  test_compose_text_entry.py  test_corpus.py  test_crawl_ingest.py  test_cross_app_routing.py  test_demo_hook_frida.py  test_driver_contract.py  test_driver_fake.py  test_effectiveness_filter.py  test_emit.py  test_emit_maestro.py  test_emit_python.py  test_events.py  test_fingerprint_compose.py  test_fingerprint_dumpsys.py  test_fingerprint_sanitize.py  test_fingerprint_settle.py  test_fingerprint_signature.py  test_fork_twin_routing.py  test_gate_binding.py  test_gate_metrics.py  test_gesture_scale.py  test_gestures.py  test_getevent_parse.py  test_global_affordance_routing.py  test_graph.py  test_graph_builder.py  test_graph_tiers.py  test_hierarchy.py  test_hierarchy_systemui.py  test_in_region_dom_aware.py  test_in_region_resolution.py  test_label_ambiguity_reason.py  test_launch_gate.py  test_launch_ladder.py  test_live_binding.py  (+51 more)
wendle/: __init__.py  actions.py  cli.py  graph.py  launch.py  models.py  render.py  (+1 more)
(+59 files in other folders)
